fix QS-Hikari item matching, item shop & I18n for component arguments